--- a/Blog해준/Blog/blogApp/templates/lionPosting.html
+++ b/Blog해준/Blog/blogApp/templates/lionPosting.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/static/css/lion.css">
   <title>lionPosting</title>
 </head>
 
@@ -27,6 +29,7 @@
   <p>{{ blog.body }}</p>
   <!-- <img src="{{blog.img.url}}" alt="#" height="600"> -->
   <a href="/lion">목록으로 이동</a>
+  <a href="/lionEdit/{{blog.pk}}">수정하기</a>
 </body>
 
 </html>
