--- a/Blog해준/Blog/blogApp/templates/lion.html
+++ b/Blog해준/Blog/blogApp/templates/lion.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,29 +6,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../static/css/lion.css">
   <title>lion</title>
 </head>
 
 <body>
-  <h1 style="color:rgb(29, 179, 29); text-align:center">
-    HAEJUN'S BLOG
-  </h1>
+  <header>
+    <h1 class="header_title">
+      HAEJUN'S BLOG
+    </h1>
+  </header>
 
   <hr>
 
-  <button><a href="lionNewPost/">글쓰기</a></button>
-  {% for blog in blogs.all %}
-  <!-- 주석과 같은 역할, for문으로 blogs전체를 돌리겠다는 뜻 -->
+  <section class="blog_list">
 
-  <div class="container" style="background-color: rgb(255, 255, 211);">
-    <a href="{{blog.pk}}" style="border: 1px solid black; display:inline-block">
-      {{ blog.title }}
-      <!-- 글 목록만 보이게 하기 위해 title만 띄우든지 해보자 -->
-    </a>
+    <div class="blog_new_button">
+      <button>
+        <a href="lionNewPost/">글쓰기</a>
+      </button>
+    </div>
 
-  </div>
-  {% endfor %}
-  <!-- 보통 시작과 끝이있다 -->
+    {% for blog in blogs.all %}
+    <!-- 주석과 같은 역할, for문으로 blogs전체를 돌리겠다는 뜻 -->
+
+    <ul class="blog_list_ul">
+      <li>
+        <a href="{{blog.pk}}">
+          {{ blog.title }}
+        </a>
+      </li>
+    </ul>
+    {% endfor %}
+  </section>
 
 </body>
 
