괄호 없이 글 수정됨 + pub_date 작성 안받음, 글 수정 시 기존 내용 안옴

--- a/BlogHJ/Blog/blogApp/templates/lionNewPost.html
+++ b/BlogHJ/Blog/blogApp/templates/lionNewPost.html
@@ -28,8 +28,8 @@
       {% csrf_token %}
       <p>제목</p>
       <input type="text" name="title" class="blog_new_area">
-      <p>시간</p>
-      <input type="datetime" name="pub_date" class="blog_new_area">
+      <!-- <p>시간</p>
+      <input type="datetime" name="pub_date" class="blog_new_area"> -->
       <p>본문</p>
       <textarea rows="10" cols="50" name="body" class="blog_new_area"></textarea>
       <!-- <input type="file" name="mainphoto"><br> -->
