--- a/BlogHJ/Blog/blogApp/templates/lionEdit.html
+++ b/BlogHJ/Blog/blogApp/templates/lionEdit.html
@@ -21,20 +21,14 @@
     </h1>
   </header>
 
-  <form method="POST">
-    <!-- 서버에 전송하기 위한 틀역할을 하는 form -->
-    <!-- action="ex)url"은 form data를 서버로 보낼 때 해당 데이터가 도착할 URL을 명시함 -->
+  <form method="POST" action="{%url 'lionUpdate' update.pk %}">
     {% csrf_token %}
-    <!-- 보안기능 -->
     제목<br>
-    <input type="text" name="title" value="{{blog.title}}"><br>
-    <!-- 여기서 value값으로 받아오면 된다고 생각했는데 views에서 edit과 아이디값으로 받으니 value값은 안써도 되는가요 
-        value없애고 해보니 그냥 value가 아무 역할을 안하고 있네요-->
-    시간<br>
-    <input type="datetime" name="pub_date" value="{{blog.pub_date}}"><br>
+    <input type="text" name="title"><br>
+    <!-- 시간<br>
+    <input type="datetime" name="pub_date"><br> -->
     내용<br>
-    <textarea rows="10" cols="50" name="body" value="{{blog.body}}"></textarea><br>
-    <!-- <input type="file" name="mainphoto"><br> -->
+    <textarea rows="10" cols="50" name="body"></textarea><br>
     <input type="submit" value="완료">
   </form>
   {% bootstrap_javascript %}
